--- a/12. blogr-landing-page/index.html
+++ b/12. blogr-landing-page/index.html
@@ -9,6 +9,7 @@
 
     <title>Blogr Landing Page</title>
     <script defer src="/public/build/bundle.js"></script>
+    <script defer src="/public/build/"></script>
   </head>
 
   <body></body>
