fixed imgs error not being in the /public

--- a/28. chat-app-css/public/index.html
+++ b/28. chat-app-css/public/index.html
@@ -64,7 +64,7 @@
 										</div>
 										<div class="app-header-avatar mx-2">
 											<img
-												src="../images/avatar.jpg"
+												src="images/avatar.jpg"
 												class="h-7 w-7 rounded-full border border-white object-cover"
 												alt="app-avatar"
 											/>
@@ -107,17 +107,17 @@
 							<div class="chat-section-right-imgs flex justify-end">
 								<div class="img-wrapper flex w-[64%] justify-between px-1.5">
 									<img
-										src="../images/dog-image-1.jpg"
+										src="images/dog-image-1.jpg"
 										alt="chat-img-1"
 										class="h-[40px] w-[40px] rounded-lg object-cover"
 									/>
 									<img
-										src="../images/dog-image-2.jpg"
+										src="images/dog-image-2.jpg"
 										alt="chat-img-1"
 										class="h-[40px] w-[40px] rounded-lg object-cover"
 									/>
 									<img
-										src="../images/dog-image-3.jpg"
+										src="images/dog-image-3.jpg"
 										alt="chat-img-1"
 										class="h-[40px] w-[40px] rounded-lg object-cover"
 									/>
