--- a/09. static-job-listings/index.html
+++ b/09. static-job-listings/index.html
@@ -1,62 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Job Listings</title>
-  </head>
-  <body>
-    <header>
-      <div id="header-bg" class="header-bg"></div>
-    </header>
-
-    <main id="job-listings">
-      <div class="container">
-        <div class="filter-section-wrapper">
-          <div class="filter-section">
-            <div class="filtered-tags"></div>
-            <div class="clear-btn">
-              <p>Clear</p>
-            </div>
-          </div>
-        </div>
-        <div class="job-card-container"></div>
-      </div>
-    </main>
-    <footer>
-      <div class="attribution">
-        Challenge by
-        <a
-          href="https://www.frontendmentor.io/challenges/job-listings-with-filtering-ivstIPCt"
-          target="_blank"
-          >Frontend Mentor</a
-        >. Coded by
-        <a
-          href="https://github.com/mattdavis06/Frontend-Mentor-Projects/tree/main/09.%20static-job-listings"
-          target="_blank"
-          >Matt Davis</a
-        >.
-        <div class="icon">
-          <a href="https://github.com/mattdavis06" target="_blank"
-            ><i class="fab fa-github"></i
-          ></a>
-        </div>
-      </div>
-    </footer>
-    <script src="script.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Job Listings with filtering is a Frontend Mentor Project that helps you practice your frontend development skills. Learn how to create a job listing search page with advanced filtering options using HTML, CSS, and JavaScript."
+		/>
+		<title>Static Job Listings</title>
+	</head>
+	<body class="bg-backgroundColor">
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
